# cdcasasagi

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: .gitignore  settings.json
.claude/scripts/: setup.sh
.github/workflows/: e2e.yml  e2e_v2.yml  publish.yml  test.yml
docs/: author-workflow.md
e2e/: .gitignore
e2e/specs/: add.spec  add_write.spec  delete.spec  errors.spec  handoff.spec  import_conflict.spec  import_write.spec  list.spec
e2e/step_impl/: step_impl.py  steps_add.py  steps_add_write.py  steps_common.py  steps_delete.py  steps_errors.py  steps_handoff.py  steps_import_conflict.py  steps_list.py
skills/cdcasasagi/: SKILL.md
src/cdcasasagi/: __init__.py  __main__.py  cli.py  desktop_config.py  mcp_proxy.py  output.py  server_name.py
tests/: test_cli.py  test_desktop_config.py  test_mcp_proxy.py  test_output.py  test_server_name.py
