[project]
name = "cdcasasagi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ftnext", email = "takuyafjp+develop@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
cdcasasagi = "cdcasasagi:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
