[project]
name = "cdcasasagi"
version = "0.1.0"
description = "Add MCP proxy entries to Claude Desktop config"
authors = [
    { name = "ftnext", email = "takuyafjp+develop@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "mcp-proxy",
]

[project.scripts]
cdcasasagi = "cdcasasagi:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7",
]
