[project]
name = "cdcasasagi"
version = "0.3.1"
description = "鵲 - Bridge Claude Desktop to Streamable HTTP MCP servers via mcp-proxy "
authors = [
    { name = "ftnext", email = "takuyafjp+develop@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9",
    "mcp-proxy",
]
keywords = ["Claude Desktop", "remote MCP servers", "mcp-proxy"]

[project.scripts]
cdcasasagi = "cdcasasagi:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "getgauge>=0.5.0",
    "pytest>=7",
    "pytest-randomly>=4.0.1",
    "ruff>=0.15.10",
]

[project.urls]
Repository = "https://github.com/ftnext/cdcasasagi"
